--- a/style/componet.css
+++ b/style/componet.css
@@ -31,7 +31,6 @@ p {
   box-sizing: border-box;
   margin: 5px;
   transition: transform 0.2s;
-
   overflow: hidden;
 }
 
@@ -52,6 +51,7 @@ p {
   color: #fff;
   padding: 5px;
   border-radius: 50px;
+  font-size: 12px;
 }
 
 .cola .sold-out-box {
