컴포넌트 완성 및 레이아웃 살짝

--- a/style/style.css
+++ b/style/style.css
@@ -2,13 +2,25 @@ body {
   background-color: #eae8fe;
 }
 
-h1, ul, li {
-  margin: 0;
+.a11y-hidden {
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
   padding: 0;
+  position: absolute;
 }
 
-li {
-  list-style: none;
+.logo a {
+  text-align: center;
+}
+
+
+h1 {
+  margin: 0;
+  padding: 0;
 }
 
 .header-wrap {
@@ -17,15 +29,31 @@ li {
 }
 
 .container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 1000px;
-  height: auto;
+  margin: 44px auto;
+  width: 800px;
+
+  display: flex;
+  gap: 28px;
+}
+
+.vending-machine,
+.pocket,
+.vending-result {
   background-color: #fff;
 }
 
-.container div {
+.vending-machine {
+  flex-basis: 360px;
+  flex-shrink: 0;
+}
+
+.sub-container {
   display: flex;
+  flex-direction: column;
+  gap: 16px;
+  flex-basis: 360px;
+  flex-shrink: 0;
+}
+
+.container div {
 }
