--- a/style/componet.css
+++ b/style/componet.css
@@ -1,17 +1,46 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap");
 
+/* 색상 변수 */
 :root {
   --main-color: #6327fe;
+  --sub-color: #eae8fe;
+  --border-color: #bdbdbd;
 }
-
+/* 테스트용 박스 */
+.white {
+  padding: 10px;
+  background-color: #fff;
+}
+/* 전역 스타일 */
 body {
   font-family: "Noto Sans KR", sans-serif;
-  background-color: #eae8fe;
+  background-color: var(--sub-color);
 }
 
+/* 숨김처리 */
+.a11y-hidden {
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+}
+
+/* 리셋, 공통스타일 */
 button {
   padding: 0;
   cursor: pointer;
+  box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.1);
+  width: 100px;
+  background-color: #fff;
+}
+
+button,
+div,
+input {
   border-radius: 8px;
 }
 
@@ -20,14 +49,12 @@ p {
   padding: 0;
 }
 
+/* 자판기 버튼 */
 .cola {
   position: relative;
-  background-color: #fff;
-  width: 110px;
   padding-top: 10px;
   padding-bottom: 10px;
   border: 1px solid #eee;
-  box-shadow: 1px 1px 3px 3px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   margin: 5px;
   transition: transform 0.2s;
@@ -45,7 +72,7 @@ p {
 }
 
 .cola .price {
-  width: 70px;
+  width: 65px;
   margin: 0 auto;
   background-color: var(--main-color);
   color: #fff;
@@ -55,10 +82,11 @@ p {
 }
 
 .cola .sold-out-box {
-  width: 100%;
-  height: 100%;
+  width: 120%;
+  height: 120%;
   position: absolute;
-  top: 0;
+  top: -5%;
+  left: -5%;
   background-color: #000;
   opacity: 0.8;
 }
@@ -68,11 +96,12 @@ p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotate(-15deg);
-  color: #eae8fe;
-  border: 6px double #eae8fe;
+  color: var(--sub-color);
+  border: 6px double var(--sub-color);
   width: 30px;
   padding: 0 8px 2px 8px;
   font-weight: bold;
+  border-radius: 0;
 }
 
 [class^="sold"] {
@@ -97,4 +126,117 @@ p {
 
 .cola:disabled [class^="sold"] {
   display: block;
+}
+
+/* 소지금, 잔액 표시 */
+.price-box {
+  padding: 10px;
+  margin: 10px;
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--sub-color);
+}
+
+.left-over {
+  width: 200px;
+}
+
+.having {
+  width: 306px;
+}
+
+.having p:nth-child(2) {
+  font-weight: bold;
+}
+
+/* 음료 리스트 */
+.drink-list {
+  margin: 10px;
+  width: 276px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.drink-list p {
+  padding: 20px 0 18px 38px;
+  font-size: 9px;
+}
+
+.drink-list .drink-count {
+  border: 1px solid var(--border-color);
+  align-self: center;
+  text-align: center;
+  box-sizing: border-box;
+  width: 35px;
+  height: 35px;
+  padding: 8px;
+  margin: 8px;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+/* 음료 리스트에 들어가는 콜라 이미지 */
+.list-original {
+  background: #fff url(/img/cola-red.svg) no-repeat 10px / 22px;
+}
+
+.list-violet {
+  background: #fff url(/img/cola-violet.svg) no-repeat 10px / 22px;
+}
+
+.list-orange {
+  background: #fff url(/img/cola-orange.svg) no-repeat 10px / 22px;
+}
+
+.list-green {
+  background: #fff url(/img/cola-green.svg) no-repeat 10px / 22px;
+}
+
+.list-cool {
+  background: #fff url(/img/cola-cool.svg) no-repeat 10px / 22px;
+}
+
+.list-yellow {
+  background: #fff url(/img/cola-yellow.svg) no-repeat 10px / 22px;
+}
+
+/* 선택한 음료, 획득한 음료 창 길이 */
+.get {
+  width: 276px;
+}
+
+.select {
+  width: 170px;
+}
+
+/* 거스름돈 반환, 입금, 획득 버튼 및
+입금액 입력 인풋 스타일 */
+[class^="btn-"] {
+  font-size: 13px;
+  font-weight: 500;
+  border: none;
+}
+
+.btn-changes,
+.btn-deposit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 33px;
+}
+
+.btn-get {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 106px;
+  color: #fff;
+  background-color: var(--main-color);
+}
+
+#deposit {
+  width: 200px;
+  height: 33px;
+  padding-left: 8px;
+  border: 2px solid var(--border-color);
 }
