--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,38 @@
+/* root 변수 */
 :root {
-  --theme-color: #eae8fe;
+  --main-color: #6327fe;
+  --bg-color: #eae8fe;
+  --name-font-size: 9px;
+  --price-font-size: 12px;
+  --btn-font-size: 13px;
+  --normal-font-size: 14px;
 }
 
 body {
-  background-color: var(--theme-color);
+  background-color: var(--bg-color);
 }
 
+/* resets */
+
+h1,
+h2,
+ul,
+li,
+p,
+div {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+/* 숨김 처리용 */
 .a11y-hidden {
   clip: rect(1px, 1px, 1px, 1px);
   clip-path: inset(50%);
@@ -17,78 +44,156 @@ body {
   position: absolute;
 }
 
-.logo a {
-  text-align: center;
-}
-
-h1,
-h2 {
-  margin: 0;
-  padding: 0;
-}
-
-/* layout */
-.header-wrap {
+/* header */
+header {
   display: flex;
   justify-content: center;
 }
 
-.l_container {
-  margin: 44px auto;
+/* container */
+.container {
+  display: flex;
   width: 748px;
-  display: flex;
   gap: 28px;
+  margin: 43px auto;
 }
 
-.vending-machine,
-.wallet,
-.vending-result {
+/* left */
+.left-wrapper {
   background-color: #fff;
-}
-
-.vending-machine {
-  flex-basis: 360px;
-  min-width: 360px;
-}
-
-.main-container {
-  padding-top: 31px;
-  padding-left: 23px;
-}
-
-.control {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 12px;
-}
-
-.sub-container {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
   flex-basis: 360px;
   flex-shrink: 0;
 }
 
-.drink-list-container {
-  background-color: var(--theme-color);
-  padding: 12px 18px 0 12px;
+/* cola-box */
+.cola-box {
+  display: flex;
+  flex-wrap: wrap;
+  height: 272px;
+  justify-content: space-around;
+  align-content: space-around;
+}
+
+.cola-box li {
   position: relative;
-  border: 2px solid #cdcdcd;
-  border-radius: 5px;
+}
+
+.cola-box label {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  width: 94px;
+  height: 130px;
+  border-radius: 10px;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.name {
+  font-size: var(--name-font-size);
+  font-weight: 500;
+}
+
+.price {
+  width: 70px;
+  height: 22px;
+  background-color: var(--main-color);
+  color: #fff;
+  font-size: var(--price-font-size);
+  border-radius: 50px;
+  line-height: 22px;
+}
+
+/* hover, active, checked 아웃라인 효과 */
+
+.cola-box label:hover,
+.cola-box input:checked + label {
+  outline: 3px solid var(--main-color);
+}
+
+.cola-box label:active {
+  transform: scale(0.95);
+}
+
+/* disabled 효과 */
+.cola-box input:disabled + label {
+  cursor: default;
+}
+
+.cola-box input:disabled + label:hover,
+.cola-box input:disabled + label:active {
+  outline: none;
+  transform: none;
+}
+
+.cola-box input:disabled + label::after {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 94px;
+  height: 130px;
+  border-radius: 10px;
+  background-image: url(../img/sold-out.svg);
+}
+
+/* right */
+.right-wrapper {
+  flex-basis: 360px;
+}
+
+.wallet {
+  background-color: #fff;
+  margin-bottom: 20px;
+  padding: 9px;
+}
+
+.money-box {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 6px 10px 6px 10px;
   box-sizing: border-box;
+  border-radius: 5px;
+  background-color: var(--bg-color);
 }
 
-.drink-list-container.result {
+.money-box.large {
+  width: 306px;
+}
+
+.money-box p {
+  font-size: var(--normal-font-size);
+  line-height: 20px;
+}
+
+.cola-list {
+  background-color: #fff;
+  text-align: center;
+}
+
+.cola-list h2 {
+  font-size: var(--normal-font-size);
+  line-height: 20px;
+}
+
+.cola-get {
+  width: 306px;
   height: 364px;
+  border: 2px solid #bdbdbd;
+  background-color: var(--bg-color);
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  position: relative;
+  border-radius: 5px;
+  padding-top: 12px;
 }
 
-.drink-list-container.pick {
-  height: 106px;
-  overflow-y: hidden;
-}
-
-.drink-list-container::after {
+.cola-get::after {
   content: " ";
   position: absolute;
   top: 9px;
@@ -99,23 +204,22 @@ h2 {
   border-radius: 50px;
 }
 
-.vending-result {
-  display: flex;
-  flex-direction: column;
-  padding: 41px 27px 26px 27px;
-  gap: 11px;
+.cola.get {
+  width: 276px;
+  height: 46px;
+  margin: 0 18px 6px 12px;
 }
 
-.vending-result h2 {
-  font-size: 14px;
-  margin: 0 auto;
+.cola .name {
+  margin-left: 38px;
 }
 
-.sum-result {
-  margin-left: auto;
-}
-
-.sum-result p {
-  font-size: 12px;
-  font-weight: 500;
+.cola .count {
+  border: 1px solid #bdbdbd;
+  width: 30px;
+  height: 30px;
+  line-height: 20px;
+  padding-top: 4px;
+  margin-right: 8px;
+  box-sizing: border-box;
 }
