벤딩머신 변경

--- a/style/style.css
+++ b/style/style.css
@@ -235,7 +235,7 @@ button:active {
   height: 106px;
   background-color: var(--main-color);
   color: #fff;
-  font-style: bold;
+  font-weight: bold;
 }
 
 .btn-get:hover {
