--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,7 @@ body {
 
 h1,
 h2,
+h3,
 ul,
 li,
 p,
@@ -299,7 +300,7 @@ input[type="number"]:focus {
   box-sizing: border-box;
 }
 
-.cola-list h2 {
+.cola-list h3 {
   font-size: var(--normal-font-size);
   line-height: 20px;
   margin-bottom: 13px;
