--- a/style/component.css
+++ b/style/component.css
@@ -6,6 +6,7 @@
   border-radius: 5px;
   height: 46px;
   margin-bottom: 6px;
+  flex-shrink: 0;
 }
 
 .cola.original {
@@ -75,15 +76,27 @@
   border-radius: 5px;
   padding: 12px 18px 0 12px;
   box-sizing: border-box;
+  overflow-y: overlay;
+  overflow-x: hidden;
 }
 
-.cola-get::after {
-  content: " ";
-  position: absolute;
-  top: 9px;
-  right: 4px;
-  width: 4px;
-  height: 79px;
+/* 박스 스크롤바 */
+.cola-get::-webkit-scrollbar {
+  width: 12px;
+}
+
+.cola-get::-webkit-scrollbar-thumb {
   background-color: #fff;
   border-radius: 50px;
+  border: 4px solid var(--bg-color);
+  width: 4px;
+  min-height: 79px;
+}
+
+.cola-get::-webkit-scrollbar-button:start:decrement {
+  height: 5px;
+}
+
+.cola-get::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0);
 }
