--- a/style/component.css
+++ b/style/component.css
@@ -76,7 +76,7 @@
   border-radius: 5px;
   padding: 12px 18px 0 12px;
   box-sizing: border-box;
-  overflow-y: overlay;
+  overflow-y: scroll;
   overflow-x: hidden;
 }
 
